...
    android:layout_height="match_parent">

    <com.dev.zaidi.NumKey.SquareFrameLayout
        android:id="@+id/key1Container"
        style="@style/keyContainer"
        app:layout_constraintBottom_toTopOf="@+id/key4Container"
        app:layout_constraintEnd_toStartOf="@+id/key2Container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/key1"
            style="@style/key"
...

    </com.dev.zaidi.NumKey.SquareFrameLayout>

    <com.dev.zaidi.NumKey.SquareFrameLayout
        android:id="@+id/key2Container"
        style="@style/keyContainer"
        app:layout_constraintBottom_toTopOf="@+id/key5Container"
        app:layout_constraintEnd_toStartOf="@+id/key3Container"
        app:layout_constraintStart_toEndOf="@+id/key1Container"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/key2"
            style="@style/key"
            android:text="@string/two" />

    </com.dev.zaidi.NumKey.SquareFrameLayout>

    <com.dev.zaidi.NumKey.SquareFrameLayout
        android:id="@+id/key3Container"
        style="@style/keyContainer"
        app:layout_constraintBottom_toTopOf="@+id/key6Container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/key2Container"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/key3"
            style="@style/key"
            android:text="@string/three" />

    </com.dev.zaidi.NumKey.SquareFrameLayout>

    <com.dev.zaidi.NumKey.SquareFrameLayout
...
        app:layout_constraintBottom_toTopOf="@+id/key8Container"
        app:layout_constraintEnd_toStartOf="@+id/key6Container"
        app:layout_constraintStart_toEndOf="@+id/key4Container"
        app:layout_constraintTop_toBottomOf="@+id/key2Container">

        <TextView
            android:id="@+id/key5"
            style="@style/key"
            android:text="@string/five" />

    </com.dev.zaidi.NumKey.SquareFrameLayout>

    <com.dev.zaidi.NumKey.SquareFrameLayout
...
        app:layout_constraintBottom_toTopOf="@+id/key9Container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/key5Container"
        app:layout_constraintTop_toBottomOf="@+id/key3Container">

        <TextView
            android:id="@+id/key6"
            style="@style/key"
            android:text="@string/six" />

    </com.dev.zaidi.NumKey.SquareFrameLayout>

    <com.dev.zaidi.NumKey.SquareFrameLayout
...
