<?xml version="1.0" encoding="utf-8"?>
<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_new_password_view"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"

    android:visibility="visible">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <com.dev.customfonts.MyTextView_Roboto_Bold
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="Hello please enter and confirm your desired password below"
                android:textColor="@color/black"
                android:textSize="16.8sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_title"


                android:layout_marginTop="4dp"
                android:orientation="vertical"
                android:padding="4dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:padding="4dp"
                    app:boxCornerRadiusTopStart="4dp"

                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="Password"
                        android:inputType="textPassword"

                        app:counterEnabled="true"
                        app:counterMaxLength="15" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til__confirm_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="3dp"
                    android:padding="4dp"
                    app:boxCornerRadiusTopStart="4dp"

                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_new_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="Confirm Password"
                        android:inputType="textPassword"

                        app:counterEnabled="true"
                        app:counterMaxLength="15" />

                </android.support.design.widget.TextInputLayout>

                <com.wang.avi.AVLoadingIndicatorView
                    android:id="@+id/avi_new_pass"

                    style="@style/AVLoadingIndicatorView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    app:indicatorColor="@color/colorPrimaryDark"
                    app:indicatorName="BallSpinFadeLoaderIndicator" />


            </LinearLayout>


            <android.support.design.button.MaterialButton

                android:backgroundTint="@color/colorPrimary"
                android:id="@+id/btn_new_pass_next"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"


                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="10dp"
                android:text="@string/next"
                android:textAppearance="@style/Widget.MaterialComponents.Button.TextButton"
                android:textColor="@color/white"

                android:textSize="16.5sp"
                app:cornerRadius="5dp"
                app:icon="@drawable/ic_next"
                app:iconPadding="4dp"
                app:iconTint="@color/white"
                app:rippleColor="@color/accent"
                app:strokeColor="@color/black"

                app:strokeWidth="2dp" />


        </LinearLayout>
    </ScrollView>


</android.support.design.card.MaterialCardView>
