...
                    </LinearLayout>


                </LinearLayout>

                <!--<com.dev.lishabora.NumKey.NumberKeyboard-->
                <!--android:id="@+id/numberKeyboard"-->
                <!--android:visibility="gone"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="200dp"-->
                <!--keyboard:keyboardType="decimal" />-->

                <LinearLayout
...
            </LinearLayout>
        </ScrollView>

<!--    android:layout_alignParentBottom="true"-->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/layout_custom_alert_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
        android:layout_marginTop="20dp"
            android:background="@color/white"
            android:layout_below="@+id/scroll"
            android:orientation="vertical">
...
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:visibility="gone" />

                <android.support.design.button.MaterialButton
                    android:id="@+id/btn_positive"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/primary"
                    android:text="Save"
                    android:textAppearance="@style/Widget.MaterialComponents.Button.TextButton"
                    android:textSize="14sp"
                    android:textStyle="bold" />


            </LinearLayout>
...
