<?xml version="1.0" encoding="utf-8"?>
<android.support.design.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_phone_view"

    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1.5"
    android:visibility="visible"

...
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:ccp_customMasterCountries="KE,UG,TZ"
                            />

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edt_phone"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginStart="3dp"
                            android:background="@android:color/transparent"
                            android:hint="@string/phone_hint"
                            android:inputType="phone"
...
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/black"/>


                    </LinearLayout>
            <android.support.design.button.MaterialButton
                android:id="@+id/btn_next_phone_view"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:layout_gravity="end"
...
